--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,6 +15,7 @@
     "import seaborn as sns\n",
     "#import scipy as sp\n",
     "#from scipy import stats\n",
+    "\n",
     "df = pd.read_csv('movies.csv')"
    ]
   },
@@ -97,15 +96,104 @@
    "outputs": [],
    "source": [
     "#fixing scale climax on RTRating\n",
-    "df.RTRating = df['RTRating'].apply(lambda x: x/10)\n"
+    "df.RTRating = df['RTRating'].apply(lambda x: x/10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#making a genres Dataframe splitting the column to 2 (links movies ID's with the genres) \n",
+    "#helpful \n",
+    "genres_df = df['Genre'].dropna()\n",
+    "genres_df = genres_df.str.split('/', expand = True)\n",
+    "genres_df.columns = ['First', 'Second']\n",
+    "\n",
+    "second_genre_df = genres_df['Second'].dropna()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Drama': 789, 'Comedy': 674, 'Musical': 53, 'Thriller': 239, 'Adventure': 274, 'Action': 420, 'Romantic Comedy': 137, 'Horror': 219, 'Western': 36, 'Documentary': 43, 'Black Comedy': 36, 'Concert': 5, 'Suspense': 239, 'Performance': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#constructing a dictionary for Genre (key = genre : value = number of movies)\n",
+    "genres_hash = {}\n",
+    "\n",
+    "for i in genres_df['First']:\n",
+    "\n",
+    "    if i not in genres_hash:\n",
+    "\n",
+    "        genres_hash[i] = 1\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        genres_hash[i] += 1\n",
+    "\n",
+    "\n",
+    "for i in second_genre_df:\n",
+    "\n",
+    "    if i not in genres_hash:\n",
+    "\n",
+    "        genres_hash[i] = 1\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        genres_hash[i] += 1\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "print(genres_hash)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Number of Movies\n",
+      "Drama                         789\n",
+      "Comedy                        674\n",
+      "Musical                        53\n",
+      "Thriller                      239\n",
+      "Adventure                     274\n",
+      "Action                        420\n",
+      "Romantic Comedy               137\n",
+      "Horror                        219\n",
+      "Western                        36\n",
+      "Documentary                    43\n",
+      "Black Comedy                   36\n",
+      "Concert                         5\n",
+      "Suspense                      239\n",
+      "Performance                     5\n"
+     ]
+    }
+   ],
+   "source": [
+    "genre_numbers_df = pd.DataFrame.from_dict(genres_hash, orient='index')\n",
+    "genre_numbers_df.columns = ['Number of Movies']\n",
+    "print(genre_numbers_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -149,10 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -166,6 +252,7 @@
     }
    ],
    "source": [
+    "#making Worldwide Gross histogram\n",
     "sns.set_context('paper')\n",
     "sns.set_style('white')\n",
     "\n",
@@ -180,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +282,7 @@
     }
    ],
    "source": [
+    "#making Rotten Tomatoes Rating histogram\n",
     "rtr_df = df['RTRating'].dropna()\n",
     "\n",
     "sns.distplot(rtr_df, kde=False, color='darkred', bins=10)\n",
@@ -207,15 +295,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,6 +312,7 @@
     }
    ],
    "source": [
+    "#making IMDB Rating histogram\n",
     "imdbr_df = df['IMDBRating'].dropna()\n",
     "\n",
     "sns.distplot(imdbr_df, kde=False, color='goldenrod', bins=8)\n",
@@ -242,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +341,7 @@
     }
    ],
    "source": [
+    "#making IMDB Votes histogram\n",
     "imdbv_df = df['IMDBVotes'].dropna()\n",
     "\n",
     "sns.distplot(imdbv_df, kde=False, color='black', bins=25)\n",
