--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#making a genres Dataframe splitting the one column to two (has movies ID's with the genres) \n",
+    "#making a genres Dataframe splitting the one column to two (Columns: ID, First, Second)\n",
     "#helpful \n",
     "genres_df = df['Genre'].dropna()\n",
     "genres_df = genres_df.str.split('/', expand = True)\n",
@@ -147,14 +147,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Genre  Number of Movies\n",
+      "0             Drama               789\n",
+      "1            Comedy               674\n",
+      "2           Musical                53\n",
+      "3          Thriller               239\n",
+      "4         Adventure               274\n",
+      "5            Action               420\n",
+      "6   Romantic Comedy               137\n",
+      "7            Horror               219\n",
+      "8           Western                36\n",
+      "9       Documentary                43\n",
+      "10     Black Comedy                36\n",
+      "11          Concert                 5\n",
+      "12         Suspense               239\n",
+      "13      Performance                 5\n"
+     ]
+    }
+   ],
    "source": [
     "#making the Genre Number Dataframe so as to make the bar plot later\n",
     "genre_numbers_df = pd.DataFrame.from_dict(genres_hash, orient = 'index')\n",
+    "genre_numbers_df.reset_index()\n",
+    "genre_numbers_df.index = range(len(genre_numbers_df))\n",
     "genre_numbers_df.columns = ['Number of Movies']\n",
-    "genre_numbers_df['Genre'] = genres_hash.keys()\n"
+    "genre_numbers_df.insert(0, 'Genre', genres_hash.keys())\n",
+    "print(genre_numbers_df)"
    ]
   },
   {
