--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -566,7 +566,7 @@
     }
    ],
    "source": [
-    "#Pearson correlation: Worldwide Gross and IMDB Votes\n",
+    "#Pearson Correlation Coefficient: Worldwide Gross and IMDB Votes\n",
     "gross_votes_df.corr(method = 'pearson')"
    ]
   },
@@ -627,34 +627,34 @@
     }
    ],
    "source": [
-    "#Spearman correlation: Worldwide Gross and IMDB Votes\n",
+    "#Spearman Correlation Coefficient: Worldwide Gross and IMDB Votes\n",
     "gross_votes_df.corr(method = 'spearman')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HO: People vote movies with high gross\n",
+      "H0: People vote movies with high gross\n",
       " \n",
       "H1:People vote movies no matter their gross\n",
       "\n",
-      "p-value:  9.055602628102016e-218\n",
+      "p-value:  0.9912672259671249\n",
       "\n",
-      "Reject Null Hypothesis (H0)\n"
+      "Accept Null Hypothesis (H0)\n"
      ]
     }
    ],
    "source": [
     "#2 sample z-test: Worldwide Gross and IMDB Votes\n",
-    "print('HO: People vote movies with high gross\\n ')\n",
+    "print('H0: People vote movies with high gross\\n ')\n",
     "print('H1:People vote movies no matter their gross\\n')\n",
-    "ztest, pval = stests.ztest(gross_votes_df['Gross'], x2 = gross_votes_df['IMDBVotes'], value = 0, alternative = 'two-sided')\n",
+    "ztest, pval = stests.ztest(gross_votes_df['Gross'], x2 = gross_votes_df['IMDBVotes'], value = gross_votes_df['Gross'].mean(), alternative = 'two-sided')\n",
     "print('p-value: ', pval)\n",
     "\n",
     "if pval<0.05:\n",
