--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "IMDBVotes  0.551452   1.000000"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "IMDBVotes  0.655319   1.000000"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -725,8 +725,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -741,7 +743,6 @@
    ],
    "source": [
     "#making RTRating and IMDBRating Scatterplot\n",
-    "\n",
     "sns.scatterplot(x = 'RTRating', y='IMDBRating', data = rtr_imdbr_df, facecolor = 'm', edgecolor = 'black')\n",
     "\n",
     "plt.title('Rotten Tomatoes Rating - IMDB Rating',color = 'black', fontsize = 18)\n",
@@ -755,17 +756,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RTRating</th>\n",
+       "      <th>IMDBRating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RTRating</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.742951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IMDBRating</th>\n",
+       "      <td>0.742951</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            RTRating  IMDBRating\n",
+       "RTRating    1.000000    0.742951\n",
+       "IMDBRating  0.742951    1.000000"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Pearson Correlation Coefficient: RTRating and IMDBRating\n",
+    "rtr_imdbr_df.corr(method = 'pearson')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RTRating</th>\n",
+       "      <th>IMDBRating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RTRating</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.776429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IMDBRating</th>\n",
+       "      <td>0.776429</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            RTRating  IMDBRating\n",
+       "RTRating    1.000000    0.776429\n",
+       "IMDBRating  0.776429    1.000000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Spearman Correlation Coefficient: RTRating and IMDBRating\n",
+    "rtr_imdbr_df.corr(method = 'spearman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0: The way people vote in Rotten Tomatoes and IMDB has a non-linear correlation.\n",
+      " \n",
+      "H1: The way people vote in Rotten Tomatoes and IMDB has a linear correlation.\n",
+      "\n",
+      "p-value:  0.0\n",
+      "\n",
+      "Reject Null Hypothesis (H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2 sample z-test:  RTRating and IMDBRating\n",
+    "print('H0: The way people vote in Rotten Tomatoes and IMDB has a non-linear correlation.\\n ')\n",
+    "print('H1: The way people vote in Rotten Tomatoes and IMDB has a linear correlation.\\n')\n",
+    "\n",
+    "ztest, pval = stests.ztest(rtr_imdbr_df['RTRating'], x2 = rtr_imdbr_df['IMDBRating'], value = rtr_imdbr_df['RTRating'].mean() , alternative = 'two-sided')\n",
+    "print('p-value: ', pval)\n",
+    "\n",
+    "if pval<0.05:\n",
+    "    \n",
+    "    print('\\nReject Null Hypothesis (H0)')\n",
+    "\n",
+    "else:\n",
+    "    \n",
+    "    print('\\nAccept Null Hypothesis (H0)')"
+   ]
   },
   {
    "cell_type": "code",
