--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -15,6 +15,7 @@
     "import seaborn as sns\n",
     "import scipy as sp\n",
     "from scipy import stats\n",
+    "from scipy.stats import sem, t\n",
     "from statsmodels.stats import weightstats as stests\n",
     "\n",
     "df = pd.read_csv('movies.csv')"
@@ -505,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -520,7 +523,6 @@
    ],
    "source": [
     "#making Worldwide Gross and IMDB Votes Scatterplot\n",
-    "\n",
     "sns.scatterplot(x = 'IMDBVotes', y = 'Gross', data = gross_votes_df, facecolor = 'goldenrod' )\n",
     "\n",
     "plt.xscale('log')\n",
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -910,6 +912,86 @@
     "else:\n",
     "    \n",
     "    print('\\nAccept Null Hypothesis (H0)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Gross              Genre\n",
+      "2         10876.0              Drama\n",
+      "3        203134.0             Comedy\n",
+      "4        373615.0             Comedy\n",
+      "5       1087521.0              Drama\n",
+      "8       6026908.0             Comedy\n",
+      "...           ...                ...\n",
+      "3183   36851125.0             Comedy\n",
+      "3184   83080084.0  Thriller/Suspense\n",
+      "3185   12506188.0          Adventure\n",
+      "3186  141475336.0          Adventure\n",
+      "3187  233700000.0          Adventure\n",
+      "\n",
+      "[2925 rows x 2 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "#merging Gross with Genre into one DataFrame\n",
+    "gross_genre_df = df[['Gross','Genre']]\n",
+    "gross_genre_df.dropna(inplace = True)\n",
+    "print(gross_genre_df)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-51-209d22d54a4f>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-209d22d54a4f>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "#constructing another dictionary for Genre (key = genre : value = total gross)\n",
+    "gen_hashmap = {}\n",
+    "count_movies = 0\n",
+    "\n",
+    " \n",
+    "for ID in zip(gross_genre_df['Gross'], gross_genre_df['Genre']):\n",
+    "        \n",
+    "    print(list(ID[1])\n",
+    "    if ID not in gen_hashmap:\n",
+    "                \n",
+    "        #count_movies+=1\n",
+    "        gen_hashmap = set(ID)\n",
+    "                \n",
+    "    else:\n",
+    "                \n",
+    "        gen_hashmap[gen] += [money, count_movies]\n",
+    "\n"
    ]
   },
   {
