--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#removing unnecessary columns\n",
-    "df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'US Gross', 'US DVD Sales', 'MPAA Rating', 'Running Time (min)', 'Distributor', 'Source', 'Creative Type'], axis = 1, inplace = True)\n",
-    "\n",
+    "#keeping only the necessary columns\n",
+    "df = df[['Title', 'Worldwide Gross', 'Production Budget', 'Release Date', 'Major Genre', 'Director', 'Rotten Tomatoes Rating', 'IMDB Rating', 'IMDB Votes']]\n",
     "#renaming some columns\n",
     "df.rename(columns = {'Worldwide Gross' : 'Gross', 'Production Budget' : 'Budget', 'Release Date' : 'Date', 'Major Genre' : 'Genre', 'Rotten Tomatoes Rating' : 'RTRating', 'IMDB Rating' : 'IMDBRating', 'IMDB Votes' : 'IMDBVotes'}, inplace = True)"
    ]
@@ -880,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -916,27 +915,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Gross              Genre\n",
-      "2         10876.0              Drama\n",
-      "3        203134.0             Comedy\n",
-      "4        373615.0             Comedy\n",
-      "5       1087521.0              Drama\n",
-      "8       6026908.0             Comedy\n",
-      "...           ...                ...\n",
-      "3183   36851125.0             Comedy\n",
-      "3184   83080084.0  Thriller/Suspense\n",
-      "3185   12506188.0          Adventure\n",
-      "3186  141475336.0          Adventure\n",
-      "3187  233700000.0          Adventure\n",
+      "            Gross     Genre1    Genre2\n",
+      "2         10876.0      Drama          \n",
+      "3        203134.0     Comedy          \n",
+      "4        373615.0     Comedy          \n",
+      "5       1087521.0      Drama          \n",
+      "8       6026908.0     Comedy          \n",
+      "...           ...        ...       ...\n",
+      "3183   36851125.0     Comedy          \n",
+      "3184   83080084.0   Thriller  Suspense\n",
+      "3185   12506188.0  Adventure          \n",
+      "3186  141475336.0  Adventure          \n",
+      "3187  233700000.0  Adventure          \n",
       "\n",
-      "[2925 rows x 2 columns]\n"
+      "[2925 rows x 3 columns]\n"
      ]
     },
     {
@@ -944,17 +943,32 @@
      "output_type": "stream",
      "text": [
       "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+      "  after removing the cwd from sys.path.\n",
+      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"\n"
      ]
     }
    ],
    "source": [
-    "#merging Gross with Genre into one DataFrame\n",
-    "gross_genre_df = df[['Gross','Genre']]\n",
+    "#merging Gross with Genres into one DataFrame\n",
+    "gross_genre_df = df[['Gross']]\n",
+    "gross_genre_df['Genre1'] = genres_df[['First']]\n",
     "gross_genre_df.dropna(inplace = True)\n",
+    "gross_genre_df['Genre2'] = genres_df[['Second']]\n",
+    "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex=True)\n",
     "print(gross_genre_df)\n",
     "\n",
     "        "
@@ -962,37 +976,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-51-209d22d54a4f>, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-209d22d54a4f>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
      ]
     }
    ],
    "source": [
-    "#constructing another dictionary for Genre (key = genre : value = total gross)\n",
-    "gen_hashmap = {}\n",
-    "count_movies = 0\n",
-    "\n",
-    " \n",
-    "for ID in zip(gross_genre_df['Gross'], gross_genre_df['Genre']):\n",
-    "        \n",
-    "    print(list(ID[1])\n",
-    "    if ID not in gen_hashmap:\n",
-    "                \n",
-    "        #count_movies+=1\n",
-    "        gen_hashmap = set(ID)\n",
-    "                \n",
-    "    else:\n",
-    "                \n",
-    "        gen_hashmap[gen] += [money, count_movies]\n",
-    "\n"
+    "a = {'dram':[1,2], 'hot': [3,5]}\n",
+    "x = list(a.get('dram'))[1]\n",
+    "#x = x[0][1]\n",
+    "print(x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Drama': [40476168953.0, 789], 'Comedy': [50384049282.0, 674], 'Musical': [3904838498.0, 53], 'Thriller': [19260687079.0, 239], 'Suspense': [19260687079.0, 239], 'Adventure': [66080959632.0, 274], 'Action': [60435609765.0, 420], 'Romantic Comedy': [11866645522.0, 137], 'Horror': [13321678769.0, 219], 'Western': [1301373151.0, 36], 'Documentary': [698944401.0, 43], 'Black Comedy': [824671927.0, 36], 'Concert': [153622009.0, 5], 'Performance': [153622009.0, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#creating a dictionary for Genre: total Gross per genre\n",
+    "\n",
+    "gross_hash ={}\n",
+    "\n",
+    "gross_list = gross_genre_df['Gross'].values\n",
+    "genre1_list = gross_genre_df['Genre1'].values\n",
+    "genre2_list = gross_genre_df['Genre2'].values\n",
+    "\n",
+    "for g in range(len(gross_list)):\n",
+    "\n",
+    "    \n",
+    "    if genre1_list[g] != ' ':\n",
+    "    \n",
+    "        if genre1_list[g] not in gross_hash:\n",
+    "            \n",
+    "            \n",
+    "            gross_hash[genre1_list[g]] = [gross_list[g], 1]\n",
+    "\n",
+    "           \n",
+    "\n",
+    "        else:\n",
+    "            \n",
+    "            gross_sum = float(list(gross_hash.get(genre1_list[g]))[0]) + gross_list[g]\n",
+    "            counter_movies = int(list(gross_hash.get(genre1_list[g]))[1]) + 1\n",
+    "            \n",
+    "            gross_hash[genre1_list[g]] = [gross_sum, counter_movies]\n",
+    "\n",
+    "            \n",
+    "            \n",
+    "    if genre2_list[g] != ' ':\n",
+    "        \n",
+    "        if genre2_list[g] not in gross_hash:\n",
+    "\n",
+    "            gross_hash[genre2_list[g]] = [gross_list[g], 1 ]\n",
+    "          \n",
+    "\n",
+    "        else:\n",
+    "            \n",
+    "            gross_sum = float(list(gross_hash.get(genre2_list[g]))[0]) + gross_list[g]\n",
+    "            counter_movies = int(list(gross_hash.get(genre2_list[g]))[1]) + 1\n",
+    "                                  \n",
+    "            gross_hash[genre2_list[g]] = [gross_sum, counter_movies]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(gross_hash)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
