--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -668,10 +668,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H0: People vote movies with high gross\n",
+      "H0: A popular movie at the cinema, is also popular online.\n",
       " \n",
-      "H1:People vote movies no matter their gross\n",
-      "\n",
       "p-value:  0.9912672259671249\n",
       "\n",
       "Accept Null Hypothesis (H0)\n"
@@ -680,8 +678,8 @@
    ],
    "source": [
     "#2 sample z-test: Worldwide Gross and IMDB Votes\n",
-    "print('H0: People vote movies with high gross\\n ')\n",
-    "print('H1:People vote movies no matter their gross\\n')\n",
+    "print('H0: A popular movie at the cinema, is also popular online.\\n ')\n",
+    "\n",
     "ztest, pval = stests.ztest(gross_votes_df['Gross'], x2 = gross_votes_df['IMDBVotes'], value = gross_votes_df['Gross'].mean(), alternative = 'two-sided')\n",
     "print('p-value: ', pval)\n",
     "\n",
@@ -696,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -891,8 +889,6 @@
      "text": [
       "H0: The way people vote in Rotten Tomatoes and IMDB has a non-linear correlation.\n",
       " \n",
-      "H1: The way people vote in Rotten Tomatoes and IMDB has a linear correlation.\n",
-      "\n",
       "p-value:  0.0\n",
       "\n",
       "Reject Null Hypothesis (H0)\n"
@@ -902,7 +898,6 @@
    "source": [
     "#2 sample z-test:  RTRating and IMDBRating\n",
     "print('H0: The way people vote in Rotten Tomatoes and IMDB has a non-linear correlation.\\n ')\n",
-    "print('H1: The way people vote in Rotten Tomatoes and IMDB has a linear correlation.\\n')\n",
     "\n",
     "ztest, pval = stests.ztest(rtr_imdbr_df['RTRating'], x2 = rtr_imdbr_df['IMDBRating'], value = rtr_imdbr_df['RTRating'].mean() , alternative = 'two-sided')\n",
     "print('p-value: ', pval)\n",
@@ -972,29 +967,7 @@
     "gross_genre_df.dropna(inplace = True)\n",
     "gross_genre_df['Genre2'] = genres_df['Second']\n",
     "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex=True)\n",
-    "print(gross_genre_df)\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = {'dram':[1,2], 'hot': [3,5]}\n",
-    "x = list(a.get('dram'))[1]\n",
-    "#x = x[0][1]\n",
-    "print(x)"
+    "print(gross_genre_df)\n"
    ]
   },
   {
