--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,115 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          First    Second\n",
-      "2         Drama      None\n",
-      "3        Comedy      None\n",
-      "4        Comedy      None\n",
-      "5         Drama      None\n",
-      "8        Comedy      None\n",
-      "...         ...       ...\n",
-      "3183     Comedy      None\n",
-      "3184   Thriller  Suspense\n",
-      "3185  Adventure      None\n",
-      "3186  Adventure      None\n",
-      "3187  Adventure      None\n",
-      "\n",
-      "[2925 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#making a genres Dataframe splitting the one column to two (Columns: ID, First, Second)\n",
-    "#helpful \n",
-    "genres_df = df['Genre'].dropna()\n",
-    "genres_df = genres_df.str.split('/', expand = True)\n",
-    "genres_df.columns = ['First', 'Second']\n",
-    "\n",
-    "second_genre_df = genres_df['Second'].dropna()\n",
-    "print(genres_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#constructing a dictionary for Genre (key = genre : value = number of movies)\n",
-    "genres_hash = {}\n",
-    "\n",
-    "for i in genres_df['First']:\n",
-    "\n",
-    "    if i not in genres_hash:\n",
-    "\n",
-    "        genres_hash[i] = 1\n",
-    "\n",
-    "    else:\n",
-    "\n",
-    "        genres_hash[i] += 1\n",
-    "\n",
-    "\n",
-    "for i in second_genre_df:\n",
-    "\n",
-    "    if i not in genres_hash:\n",
-    "\n",
-    "        genres_hash[i] = 1\n",
-    "\n",
-    "    else:\n",
-    "\n",
-    "        genres_hash[i] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              Genre  Number of Movies\n",
-      "0             Drama               789\n",
-      "1            Comedy               674\n",
-      "2            Action               420\n",
-      "3         Adventure               274\n",
-      "4          Thriller               239\n",
-      "5          Suspense               239\n",
-      "6            Horror               219\n",
-      "7   Romantic Comedy               137\n",
-      "8           Musical                53\n",
-      "9       Documentary                43\n",
-      "10          Western                36\n",
-      "11     Black Comedy                36\n",
-      "12          Concert                 5\n",
-      "13      Performance                 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "#making the Genre Number Dataframe so as to make the bar plot later\n",
-    "genre_numbers_df = pd.DataFrame.from_dict(genres_hash, orient = 'index')\n",
-    "genre_numbers_df.columns = ['Number of Movies']\n",
-    "genre_numbers_df.insert(0, 'Genre', genres_hash.keys())\n",
-    "genre_numbers_df.sort_values('Number of Movies', ascending = False, inplace = True)\n",
-    "genre_numbers_df.reset_index()\n",
-    "genre_numbers_df.index = range(len(genre_numbers_df))\n",
-    "print(genre_numbers_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +147,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Gross      Budget\n",
+      "1        146083.0   8000000.0\n",
+      "2         10876.0    300000.0\n",
+      "3        203134.0    250000.0\n",
+      "4        373615.0    300000.0\n",
+      "5       1087521.0   1000000.0\n",
+      "...           ...         ...\n",
+      "3183   36851125.0  24000000.0\n",
+      "3184   83080084.0  85000000.0\n",
+      "3185   12506188.0  35000000.0\n",
+      "3186  141475336.0  80000000.0\n",
+      "3187  233700000.0  65000000.0\n",
+      "\n",
+      "[3186 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#making Budget and GrossDataframe ---my data mining problem ---\n",
+    "budget_gross_df = df[['Gross', 'Budget']]\n",
+    "budget_gross_df = budget_gross_df.dropna()\n",
+    "print(budget_gross_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          First    Second\n",
+      "2         Drama      None\n",
+      "3        Comedy      None\n",
+      "4        Comedy      None\n",
+      "5         Drama      None\n",
+      "8        Comedy      None\n",
+      "...         ...       ...\n",
+      "3183     Comedy      None\n",
+      "3184   Thriller  Suspense\n",
+      "3185  Adventure      None\n",
+      "3186  Adventure      None\n",
+      "3187  Adventure      None\n",
+      "\n",
+      "[2925 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#making a genres Dataframe splitting the one column to two (Columns: ID, First, Second)\n",
+    "#helpful \n",
+    "genres_df = df['Genre'].dropna()\n",
+    "genres_df = genres_df.str.split('/', expand = True)\n",
+    "genres_df.columns = ['First', 'Second']\n",
+    "\n",
+    "second_genre_df = genres_df['Second'].dropna()\n",
+    "print(genres_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#constructing a dictionary for Genre (key = genre : value = number of movies)\n",
+    "genres_hash = {}\n",
+    "\n",
+    "for i in genres_df['First']:\n",
+    "\n",
+    "    if i not in genres_hash:\n",
+    "\n",
+    "        genres_hash[i] = 1\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        genres_hash[i] += 1\n",
+    "\n",
+    "\n",
+    "for i in second_genre_df:\n",
+    "\n",
+    "    if i not in genres_hash:\n",
+    "\n",
+    "        genres_hash[i] = 1\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        genres_hash[i] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Genre  Number of Movies\n",
+      "0             Drama               789\n",
+      "1            Comedy               674\n",
+      "2            Action               420\n",
+      "3         Adventure               274\n",
+      "4          Thriller               239\n",
+      "5          Suspense               239\n",
+      "6            Horror               219\n",
+      "7   Romantic Comedy               137\n",
+      "8           Musical                53\n",
+      "9       Documentary                43\n",
+      "10          Western                36\n",
+      "11     Black Comedy                36\n",
+      "12          Concert                 5\n",
+      "13      Performance                 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#making the Genre Number Dataframe so as to make the bar plot later\n",
+    "genre_numbers_df = pd.DataFrame.from_dict(genres_hash, orient = 'index')\n",
+    "genre_numbers_df.columns = ['Number of Movies']\n",
+    "genre_numbers_df.insert(0, 'Genre', genres_hash.keys())\n",
+    "genre_numbers_df.sort_values('Number of Movies', ascending = False, inplace = True)\n",
+    "genre_numbers_df.reset_index()\n",
+    "genre_numbers_df.index = range(len(genre_numbers_df))\n",
+    "print(genre_numbers_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -355,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -537,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +619,7 @@
        "IMDBVotes  0.551452   1.000000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +680,7 @@
        "IMDBVotes  0.655319   1.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -694,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -758,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +840,7 @@
        "IMDBRating  0.742951    1.000000"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +901,7 @@
        "IMDBRating  0.776429    1.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
